--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContactsActivity"
-            android:label="@string/title_contacts_activity"
-            ></activity>
+        <activity
+            android:name=".ContactsActivity"
+            android:label="@string/title_contacts_activity" />
         <activity
             android:name=".MeetingActivity"
             android:label="@string/title_meeting_activity" />
